# dpw

./: README.md  pyproject.toml
dpw/: __init__.py  calculator.py  visualizer.py
dpw.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dpw/templates/: dpw_interactive.html.j2  dpw_results.html.j2
dpw/utils/: exceptions.py
dpw_calculator.egg-info/: SOURCES.txt  requires.txt
scripts/: deploy_vps.sh  feishu_dpw_bot.py
src/: __main__.py  reporter.py
src/dpw/: __init__.py  __main__.py  calculator.py  config.py  optimized_calculator.py
src/dpw/templates/: dpw_comparison.html.j2
src/dpw_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: logger.py
tests/: conftest.py  test_calculator_basic.py  test_calculator_coverage.py  test_calculator_edge_cases.py  test_cli_integration.py  test_cli_smoke.py  test_config.py  test_config_basic.py  test_property_based.py  test_quick_coverage.py
