[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpw-calculator"
version = "1.0.0"
description = "Die per wafer calculator"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "PyEDA Team" }]
dependencies = [
  "PyYAML>=6.0",
  "Jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "hypothesis>=6.0",
]

feishu = [
  "fastapi>=0.110",
  "uvicorn>=0.23",
  "requests>=2.31",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dpw"]

[tool.setuptools.package-data]
dpw = ["templates/*.j2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
